# confidential-ml-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benches/: pipeline_bench.rs
benchmark_results/: nitro_vsock_20tok.json  nitro_vsock_2stage_20tok.json  nitro_vsock_2stage_50tok.json  nitro_vsock_3stage_20tok.json  nitro_vsock_3stage_50tok.json  nitro_vsock_50tok.json  nitro_vsock_benchmark.json  nitro_vsock_benchmark.md
benchmark_results/azure_dc4ads_v5/: 1stage_run1.json  1stage_run2.json  1stage_run3.json  1stage_run4.json  1stage_run5.json  2stage_run1.json  2stage_run2.json  2stage_run3.json  2stage_run4.json  2stage_run5.json  attestation_evidence.json  attestation_overhead_comparison.json  claim_falsification_checklist.md  pipeline_latency.md  statistical_summary.json
benchmark_results/gcp_c3_normalized/: 1stage_run1.json  1stage_run2.json  1stage_run3.json  1stage_run4.json  1stage_run5.json  2stage_run1.json  2stage_run2.json  2stage_run3.json  2stage_run4.json  2stage_run5.json  platform_metadata.json  statistical_summary.json
benchmark_results/gcp_c3_standard/: 1stage_run1.json  1stage_run2.json  1stage_run3.json  1stage_run4.json  1stage_run5.json  2stage_run1.json  2stage_run2.json  2stage_run3.json  2stage_run4.json  2stage_run5.json  cross_vm_rtt.txt  platform_metadata.json  statistical_summary.json
benchmark_results/gcp_c3_tdx/: 1stage_run1.json  1stage_run2.json  1stage_run3.json  1stage_run4.json  1stage_run5.json  2stage_run1.json  2stage_run2.json  2stage_run3.json  2stage_run4.json  2stage_run5.json  cross_vm_rtt.txt  platform_metadata.json  statistical_summary.json
benchmark_results/gcp_c3_tdx_attested/: 1stage_run1.json  1stage_run2.json  1stage_run3.json  1stage_run4.json  1stage_run5.json  cross_vm_rtt.txt  platform_metadata.json  statistical_summary.json
benchmark_results/stat_bench/: 1stage_run1.json  1stage_run2.json  1stage_run3.json  1stage_run4.json  1stage_run5.json  2stage_run1.json  2stage_run2.json  2stage_run3.json  2stage_run4.json  2stage_run5.json  3stage_run1.json  3stage_run2.json  3stage_run3.json  3stage_run4.json  3stage_run5.json  statistical_summary.json
examples/gpt2-pipeline/: Cargo.toml  Dockerfile  README.md  init.sh
examples/gpt2-pipeline/manifests/: manifest_1stage.json  manifest_1stage_vsock.json  manifest_2stage.json  manifest_2stage_vsock.json  manifest_3stage.json  manifest_3stage_vsock.json
examples/gpt2-pipeline/scripts/: bench.sh  bench_gcp.sh  build_nitro.sh  check_quality.sh  cleanup_gcp.sh  download_model.sh  run_gcp.sh  run_local.sh  run_local_3stage.sh  run_nitro.sh  test_failure.sh  verify_vs_python.sh
examples/gpt2-pipeline/src/: executor.rs  model.rs  pipeline_orch.rs  stage_worker.rs
examples/gpt2-pipeline/tests/: cli_smoke.rs
examples/mock-pipeline/: Cargo.toml
examples/mock-pipeline/src/: main.rs
examples/tcp-pipeline/: Cargo.toml
examples/tcp-pipeline/src/: pipeline_orch.rs  stage_worker.rs
scripts/: bench_azure.sh  enclave_run.sh  run_stat_bench.sh  run_stat_bench_resume.sh
src/: error.rs  executor.rs  lib.rs  manifest.rs  orchestrator.rs  protocol.rs  relay.rs  scheduler.rs  stage.rs  tcp.rs  vsock.rs
tests/: cleanup_test.rs  fault_test.rs  pipeline_mock.rs  protocol_hardening_test.rs  relay_capture.rs  relay_test.rs  retry_test.rs  scheduler_test.rs  stress_test.rs  tcp_pipeline.rs  timeout_test.rs  weight_hash_test.rs
