[package]
name = "confidential-ml-pipeline"
version = "0.3.0"
edition = "2021"
description = "Multi-enclave pipeline orchestration for confidential ML inference"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyntrisec/confidential-ml-pipeline"
keywords = ["tee", "confidential", "ml", "pipeline", "encryption"]
categories = ["cryptography", "network-programming"]

[dependencies]
confidential-ml-transport = { version = "0.4", path = "../confidential-ml-transport", default-features = false }
bytes = "1.5"
tokio = { version = "1.38", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio-vsock = { version = "0.7", optional = true }

[features]
default = ["mock", "tcp"]
mock = ["confidential-ml-transport/mock"]
tcp = ["confidential-ml-transport/tcp"]
vsock = ["confidential-ml-transport/vsock", "dep:tokio-vsock"]
nitro = ["confidential-ml-transport/nitro"]
sev-snp = ["confidential-ml-transport/sev-snp"]
tdx = ["confidential-ml-transport/tdx"]
azure-sev-snp = ["confidential-ml-transport/azure-sev-snp"]

[dev-dependencies]
tokio = { version = "1.38", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

[[bench]]
name = "pipeline_bench"
harness = false
