[package]
name = "gpt2-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stage-worker"
path = "src/stage_worker.rs"

[[bin]]
name = "pipeline-orch"
path = "src/pipeline_orch.rs"

[dependencies]
confidential-ml-pipeline = { path = "../..", features = ["mock", "tcp"] }
confidential-ml-transport = { path = "../../../confidential-ml-transport" }
async-trait = "0.1"
bytes = "1.5"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.5"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
